fix element overlap on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ main {
   width: 200px;
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 1fr auto 80px 40px;
+  grid-template-rows: 200px auto 80px 40px;
+
 }
 
 #brand {
@@ -56,6 +57,7 @@ img {
   grid-area: 1 / 1 / 1 / 3;
   border-radius: 50%;
   border: solid salmon;
+  align-self: end;
   justify-self: center;
   margin: 10px;
 }
@@ -112,10 +114,12 @@ img {
   #status {
     grid-area: status;
     text-align: left;
+    margin: 10px;
   }
 
   img {
     grid-area: picture;
+    align-self: start;
   }
 
   #contact {
@@ -124,13 +128,14 @@ img {
 
   #name {
     grid-area: name;
-    text-align: left;
+    justify-self: start;
+    padding-left: 10px;
   }
 
   #occupation {
     grid-area: occupation;
     text-align: left;
-    padding: 10px;
+    padding-left: 10px;
     background-color: ivory;
     font-size: 1.6rem;
   }
@@ -139,6 +144,7 @@ img {
     grid-area: brand;
     font-size: 1.5rem;
     color: black;
+    padding-left: 10px;
   }
 
   #offer {
